--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=chaos-monkey
+chaos.monkey.enabled=true
+
+chaos.monkey.watcher.service=true
+chaos.monkey.assaults.latencyActive=true
+
+management.endpoint.chaosmonkey.enabled=true
+management.endpoints.web.exposure.include=health,info,chaosmonkey
